[package]
name = "racl"
version = "0.1.0"
edition = "2024"
description = "Reallocation counting-based smart pointers"

[dependencies]
parking_lot.version = "0.12.5"
parking_lot.optional = true

[dev-dependencies]
assert-impl = "0.1.3"

[features]
default = ["parking_lot"]
parking_lot = ["dep:parking_lot"]