[package]
name = "racl"
version = "0.1.0"
edition = "2024"
description = "Reallocation counting-based smart pointers"

[dependencies]
parking_lot.version = "0.12.5"

tokio.version = "1.49.0"
tokio.optional = true
tokio.features = ["sync", "rt"]

[dev-dependencies]
assert-impl = "0.1.3"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
