[package]
name = "racl"
version = "0.1.0"
edition = "2024"
description = "Reallocation counting-based smart pointers"

[dependencies]
parking_lot.version = "0.12.5"
parking_lot.optional = true

tokio.version = "^1"
tokio.optional = true
tokio.features = ["rt"]

bumpalo.version = "^3"
bumpalo.optional = true

[dev-dependencies]
assert-impl = "0.1.3"

tokio.version = "^1"
tokio.optional = false
tokio.features = ["rt"]

[features]
default = ["parking-lot", "bumpalo"]
#default = ["parking-lot"]
tokio = ["dep:tokio"]
parking-lot = ["dep:parking_lot"]
bumpalo = ["dep:bumpalo"]
