[package]
name = "ralc-internals"
version = "0.1.0"
edition = "2024"

[features]
default = ["parking_lot", "rootcause"]
parking_lot = ["dep:parking_lot"]
rootcause = ["dep:rootcause"]

[dependencies]
rootcause.version = "0.12"
rootcause.optional = true
parking_lot.version = "0.12.5"
parking_lot.optional = true
